fixed backdrop visibility

--- a/style.css
+++ b/style.css
@@ -155,8 +155,8 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
-    visibility: block;
-    opacity: 1;
+    visibility: hidden;
+    opacity: 0;
     transition: all 300ms ease;
     transform: translateY(100%);
 }
